[project]
name = "hsmsim"
version = "0.1.0"
description = "nShield HSM Simulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-html>=4.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
